<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  xmlns:tools="http://schemas.android.com/tools"
  android:minHeight="200dp"
  android:minWidth="300dp"
  android:orientation="vertical"
  android:padding="8dp">

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:text="@string/label_title"
    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
    />

  <EditText
    android:id="@+id/inputTitle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:hint="@string/hint_book_title"
    android:inputType="textCapWords"
    android:maxLength="255"
    android:maxLines="3"
    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
    />

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:text="@string/label_author"
    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
    />

  <EditText
    android:id="@+id/inputAuthor"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:hint="@string/hint_author_name"
    android:inputType="textCapWords"
    android:maxLength="255"
    android:maxLines="2"
    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
    />

  <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="right"
    android:layout_margin="8dp"
    >

    <Button
      android:id="@+id/buttonDelete"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="left"
      android:text="@string/delete"
      tools:visibility="visible"
      android:visibility="gone"
      />

    <Button
      android:id="@+id/buttonSave"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="4dp"
      android:layout_gravity="right"
      android:text="@string/save"
      />

  </LinearLayout>


</LinearLayout>